objects/Quote_Approval_Config_And_Steps__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Type__c</fullName>
        <formula>TEXT(Quote_Approval_Config__r.Approval_Type__c)</formula>
        <label>Approval Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>Quote_Approval_Steps__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Type__c</fullName>
        <formula>TEXT(Quote_Approval_Config__r.Pricing_Type__c)</formula>
        <label>Pricing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Approval_Config__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Approval Config</label>
        <referenceTo>Quote_Approval_Config__c</referenceTo>
        <relationshipLabel>Quote Approval Config And Steps</relationshipLabel>
        <relationshipName>Quote_Approval_Config_And_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Approval_Steps__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Approval Steps</label>
        <referenceTo>Quote_Approval_Steps__c</referenceTo>
        <relationshipLabel>Quote Approval Config And Steps</relationshipLabel>
        <relationshipName>Quote_Approval_Config_And_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <formula>Quote_Approval_Steps__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Step</label>
        <type>Text</type>
    </fields>
    <label>Quote Approval Config And Steps</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Quote_Approval_Config__c</columns>
        <columns>Quote_Approval_Steps__c</columns>
        <columns>Step__c</columns>
        <columns>Description__c</columns>
        <columns>Approval_Type__c</columns>
        <columns>Pricing_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EVP_CSM_Score_2_and_1_Quote_Approval_Config_And_Steps</fullName>
        <filterScope>Queue</filterScope>
        <label>EVP CSM Score 2 and 1</label>
        <queue>EVP_CSM_Score_2_and_1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Professional_Services_Discount_Queue_Quote_Approval_Config_And_Steps</fullName>
        <filterScope>Queue</filterScope>
        <label>Professional Services</label>
        <queue>Professional_Services_Discount_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Regional_SVP_CSM_PCC_Score_3_Quote_Approval_Config_And_Steps</fullName>
        <filterScope>Queue</filterScope>
        <label>Regional SVP CSM PCC Score 3</label>
        <queue>Regional_SVP_CSM_PCC_Score_3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Regional_SVP_CSM_PC_Score_3_Quote_Approval_Config_And_Steps</fullName>
        <filterScope>Queue</filterScope>
        <label>Regional SVP CSM PC Score 3</label>
        <queue>Regional_SVP_CSM_PC_Score_3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Regional_SVP_CSM_PEC_Score_3_Quote_Approval_Config_And_Steps</fullName>
        <filterScope>Queue</filterScope>
        <label>Regional SVP CSM PEC Score 3</label>
        <queue>Regional_SVP_CSM_PEC_Score_3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TCV_Reduction_PCC_Quote_Approval_Config_And_Steps</fullName>
        <filterScope>Queue</filterScope>
        <label>TCV Reduction (PCC)</label>
        <queue>TCV_Reduction_PCC</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>subReg_CSM_PCC_APAC_Score_4_Quote_Approval_Config_And_Steps</fullName>
        <filterScope>Queue</filterScope>
        <label>subReg CSM PCC APAC Score 4</label>
        <queue>subReg_CSM_PCC_APAC_Score_4</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>subReg_CSM_PCC_Score_4_Quote_Approval_Config_And_Steps</fullName>
        <filterScope>Queue</filterScope>
        <label>subReg CSM PCC Score 4</label>
        <queue>subReg_CSM_PCC_Score_4</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>subReg_CSM_PC_APAC_Score_4_Quote_Approval_Config_And_Steps</fullName>
        <filterScope>Queue</filterScope>
        <label>subReg CSM PC APAC Score 4</label>
        <queue>subReg_CSM_PC_APAC_Score_4</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>subReg_CSM_PC_Score_4_Quote_Approval_Config_And_Steps</fullName>
        <filterScope>Queue</filterScope>
        <label>subReg CSM PC Score 4</label>
        <queue>subReg_CSM_PC_Score_4</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>subReg_CSM_PEC_Score_4_Quote_Approval_Config_And_Steps</fullName>
        <filterScope>Queue</filterScope>
        <label>subReg CSM PEC Score 4</label>
        <queue>subReg_CSM_PEC_Score_4</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>QACSN-{00000}</displayFormat>
        <label>Quote Approval Config And Steps Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Approval Config And Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>